--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Проект Kinopoisk на js</title>
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<nav class="navbar">
@@ -23,7 +24,9 @@
 	</div>
 
 	<div class="container">
-		<div id="movies" class="row"></div>
+		<div id="movies" class="row">
+			
+		</div>
 	</div>
 	<script src="js/script.js"></script>
 </body>
